@@ -132,6 +132,13 @@ ssl_enabled=false
 # <code>Runtime.getRuntime().availableProcessors()</code>.
 # num_readahead_cache_threads=
 
+# Set TTL for cache entries. Each time adding new entry into the cache,
+# those expired cache entries would be discarded. If the value is set
+# to zero or less than zero, cache entry will not be evicted until the
+# cache is fullfilled or the messages are already consumed. By default
+# the value is zero.
+# cache_entry_ttl=
+
 ################################
 # Metadata Settings
 ################################
